--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "release": "npm publish && git commit -am \"$npm_package_name v$npm_package_version\" && git push"
   },
   "dependencies": {
-    "@hotwired/turbo": "^7.3.0",
+    "@hotwired/turbo": "https://github.com/stampedai/turbo.git#turbo-7-fix-submit-polyfill",
     "@rails/actioncable": "^7.0"
   },
   "devDependencies": {
