--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "release": "npm publish && git commit -am \"$npm_package_name v$npm_package_version\" && git push"
   },
   "dependencies": {
-    "@hotwired/turbo": "^7.3.0",
+    "@hotwired/turbo": "^8.0.0-beta.1",
     "@rails/actioncable": "^7.0"
   },
   "devDependencies": {
